hphp/hack/test/typecheck/unbound_name/shape_key.php.exp
File "shape_key.php", line 13, characters 5-12:
Unbound name: `NotFound` (an object type) (Naming[2049])
