hphp/hack/test/typecheck/unbound_name/shape_key.php
<?hh

class A {
  const string KEY = "KEY";
}

type my_shape = shape(
  A::KEY => string,
);

type my_shape2 = shape(
  "HELLO" => shape(
    NotFound::KEY => string,
  ),
);
